# nixutil

./: .cirrus.yml  .isort.cfg  Pipfile  README.md  setup.cfg
.github/workflows/: ci.yml
nixutil/: __init__.py  beneath.py  ffi.py  recover_path.py
nixutil/plat_util/: __init__.py  bsd_util.py  freebsd.py  linux.py  macos.py
scripts/: check.sh  format.sh
tests/: test_beneath.py  test_recover_path.py  util.py
