[metadata]
name = nixutil
version = attr: nixutil.__version__
url = https://github.com/cptpcrd/nixutil
description = Some low-level utility functions for *nix platforms.
long_description = file: README.md
long_description_content_type = text/markdown
license = MIT
classifiers =
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Operating System :: POSIX :: Linux
    Operating System :: POSIX :: BSD :: OpenBSD
    Operating System :: POSIX :: BSD :: NetBSD
    Operating System :: POSIX :: BSD :: FreeBSD
    Operating System :: MacOS :: MacOS X

[options]
packages = find:
python_requires = >=3.6

[options.packages.find]
exclude = tests

[options.package_data]
nixutil = py.typed

# vim: ts=4 expandtab
